# lista-de-compras

./: .gitignore  CMakeLists.txt  README.md
csv/: items.csv  shopping_lists.csv
includes/: Item.hpp  PerishableItem.hpp  PersonalizedException.hpp  ShoppingList.hpp  System.hpp  csv.hpp
principal/: main.cpp
src/: Item.cpp  PerishableItem.cpp  PersonalizedException.cpp  ShoppingList.cpp  System.cpp  csv.cpp
test/: CMakeLists.txt  Item.test.cpp  ShoppingList.test.cpp  csv.test.cpp  csvTest.csv
